settings, additional info pages and functionality

--- a/ProfileProject/appsettings.json
+++ b/ProfileProject/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore.Database" : "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.EntityFrameworkCore.Database": "Warning"
+        }
+    },
+
+    "Profile": {
+        "PFPMaxSize": "10"
+    },
   "AllowedHosts": "*"
 }
