--- a/ProfileProject/ProfileProject.csproj
+++ b/ProfileProject/ProfileProject.csproj
@@ -15,11 +15,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data\Services\Interfaces\" />
     <Folder Include="wwwroot\Media\" />
+    <Folder Include="wwwroot\Profile\PFPs\Users\" />
   </ItemGroup>
 
   <ItemGroup>
