Changelog: Image processing is now in ImageProcessor class with IImageProcessor interface Tests for all controllers and services

--- a/ProfileProject/appsettings.json
+++ b/ProfileProject/appsettings.json
@@ -9,7 +9,8 @@
     },
 
     "Profile": {
-        "PFPMaxSize": "10"
+        "PFPMaxSize": "10",
+        "AllowedExtensions": [ ".png", "jpeg", ".jpg" ]
     },
   "AllowedHosts": "*"
 }
