--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Generate report
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator -reports:TestResults/**/coverage.cobertura.xml -targetdir:CoverageReport -reporttypes:Badges
+        reportgenerator -reports:TestResults/coverage.cobertura.xml -targetdir:CoverageReport -reporttypes:Badges
 
     - name: Publish
       run: dotnet publish -c Release -o ./Publish --no-build
