--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -26,12 +26,35 @@ jobs:
       run: dotnet build -c Release --no-restore
 
     - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal --collect:"XPat Code Coverage" --results-directory TestResults
+      run: dotnet test -c Release --no-build --verbosity normal
 
-    - name: Generate report
+    - name: Test with coverage
       run: |
-        dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator -reports:TestResults/coverage.cobertura.xml -targetdir:CoverageReport -reporttypes:Badges
+        dotnet test \
+          --configuration Release \
+          --no-build \
+          --collect:"XPlat Code Coverage" \
+          --settings coverlet.runsettings \
+          --logger trx
+
+    - name: Generate Coverage Report
+      uses: danielpalme/ReportGenerator-GitHub-Action@5.1.25
+      with:
+        reports: '**/coverage.cobertura.xml'
+        targetdir: 'coveragereport'
+        reporttypes: 'Badges;HtmlInline_AzurePipelines;Cobertura'
+
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coveragereport
+
+    - name: Upload to Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ./**/coverage.info
 
     - name: Publish
       run: dotnet publish -c Release -o ./Publish --no-build
