--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -41,5 +41,9 @@ jobs:
       run: |
         dotnet test --collect:"XPlat Code Coverage" --settings coverlet.runsettings
 
-    - name: Upload to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload to Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }} 
+        path-to-lcov: ./**/lcov.info 
+        repo-token: ${{ secrets.COVERALLS_REPO_TOKEN }} 
