--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -41,9 +41,5 @@ jobs:
       run: |
         dotnet test --collect:"XPlat Code Coverage" --settings coverlet.runsettings
 
-    - name: Upload to Coveralls
-      uses: coverallsapp/github-action@v2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }} 
-        path-to-lcov: ./**/lcov.info 
-        repo-token: ${{ secrets.COVERALLS_REPO_TOKEN }} 
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.3.6
