--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -42,8 +42,9 @@ jobs:
         dotnet test -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./TestResults/coverage.xml
 
     - name: list files
-      run: ls
-      
+      run: |
+        cd
+        ls
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.6
