--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -39,12 +39,10 @@ jobs:
 
     - name: Collect coverage
       run: | 
-        dotnet test -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./TestResults/coverage.xml
-
-    - name: list files
-      run: |
-        cd
         ls
+        mkdir -p ./TestResults
+        ls
+        dotnet test -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./TestResults/coverage.xml
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.6
