--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -43,6 +43,8 @@ jobs:
         mkdir -p ./TestResults
         ls
         dotnet test -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./TestResults/coverage.xml
+        cd /TestResults
+        ls
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.6
