--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet build -c Release --no-restore
 
     - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal
+      run: dotnet test -c Release --no-build --logger "console;verbosity=detailed"
 
     - name: Publish
       run: dotnet publish -c Release -o ./Publish --no-build
@@ -41,7 +41,7 @@ jobs:
       run: | 
         mkdir -p ./TestResults
         ls
-        dotnet test -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./TestResults/coverage.xml
+        dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$GITHUB_WORKSPACE/TestResults/coverage.xml --verbosity=detailed
         cd TestResults
         pwd
         ls
