--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -26,27 +26,7 @@ jobs:
       run: dotnet build -c Release --no-restore
 
     - name: Test
-      run: dotnet test -c Release --no-build --logger "console;verbosity=detailed"
+      run: dotnet test -c Release --no-build
 
     - name: Publish
       run: dotnet publish -c Release -o ./Publish --no-build
-
-    - name: Save artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-data
-        path: ./Publish/
-
-    - name: Collect coverage
-      run: | 
-        mkdir -p ./TestResults
-        ls
-        dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$GITHUB_WORKSPACE/TestResults/coverage.xml --verbosity=detailed
-        cd TestResults
-        pwd
-        ls
-
-    - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@v2.3.6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
