--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -30,3 +30,6 @@ jobs:
 
     - name: Publish
       run: dotnet publish -c Release -o ./Publish --no-build
+
+    - name: Get coverage report
+      run: dotnet test --collect:"XPlat Code Coverage;Format=opencover"
