--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -33,3 +33,6 @@ jobs:
 
     - name: Get coverage report
       run: dotnet test --collect:"XPlat Code Coverage;Format=opencover"
+
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.3.6
