--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -33,10 +33,10 @@ jobs:
 
     - name: Get coverage report
       run: | 
-        dotnet test --collect:"XPlat Code Coverage;Format=cobertura" 
-        find ./TestResults -type f -name "*.xml"
+        dotnet test --collect:"XPlat Code Coverage;Format=cobertura"
+        ls
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.6
       with:
-        file: find ./TestResults -type f -name "*.xml"
+        file: 
