--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Get coverage report
       run: | 
         dotnet test --collect:"XPlat Code Coverage;Format=cobertura"
+        pwd
         find /ProfileProjectTests/TestResults -type f -name "*.xml"
 
     - name: Coveralls GitHub Action
