--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Get coverage report
       run: | 
         dotnet test --collect:"XPlat Code Coverage;Format=cobertura"
-        pwd
-        find /ProfileProjectTests/TestResults -type f -name "*.xml"
+        cd ProfileProjectTests
+        ls
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.6
