--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-/ProfileProject/wwwroot/Profile/PFPs/Users/*.
+/ProfileProject/wwwroot/Profile/PFPs/Users/
 
 
 # User-specific files
